# llm-soc-triage

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  ETHICS.md  MITRE_MAPPING.md  architecture.html
samples/: sample_alerts.jsonl
src/soc_triage/: __init__.py  alert_source.py  dashboard.py  kill_switch.py  llm_provider.py  py.typed  renderer.py  schema.py  server.py  store.py  triage.py
src/soc_triage/templates/: triage.md.j2  triage.slack.j2  triage.teams.j2
tests/: test_alert_source.py  test_kill_switch.py  test_llm_provider.py  test_schema.py  test_server.py  test_store.py  test_triage.py
